# hyperagent

./: .cursorrules  .dockerignore  .env.example  .env.issue.example  .env.render  .gitignore  .gitlint  .gitmodules  .npmrc  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mlflow  LICENSE  Makefile  PR_DESCRIPTION.md  QUICK_REFERENCE.md  README.DOCKER.md  README.md  SECURITY.md  commitlint.config.cjs  docker-compose.coolify.yml  docker-compose.yml  env.example  hyperagent.config.json  lint-staged.config.cjs  llm.txt  llms.txt  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+8 more)
.changeset/: config.json
.cursor/: skills.md
.devin/: wiki.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md  required-checks.json
.husky/: pre-commit  pre-push
.orchids/: orchids.json
.semgrep/: hyperagent.yml
GUIDE/: API.md  BRANCH_WORKFLOW.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCKER.md  GETTING_STARTED.md  SIMPLIFIED_GUIDE.md  SIMPLIFIED_SETUP.md  USER_GUIDE.md
Hyperagent Refactor/: Plan.md
alembic/: env.py
apps/: README.md
audit/: 00-severity-report.md  01-ownership-matrix.md  02-scenario-matrix.md  03-route-verification.md  04-drift-matrix.md  05-duplicate-matrix.md  06-legacy-deadcode-matrix.md  07-harness-gaps.md  README.md  findings.json
config/: base.yaml  deployment.yaml  development.yaml  pricing.yaml  x402.yaml
ts/: README.md  (+1 more)
(+1767 files in other folders)
